--- a/dataAnalysis.ipynb
+++ b/dataAnalysis.ipynb
@@ -1138,14 +1138,14 @@
     "- [第一週](https://1010code.github.io/mapbox-marker/weekMean/index.html)\n",
     "- [半個月](https://1010code.github.io/mapbox-marker/halfMean/index.html)\n",
     "- [一個月](https://1010code.github.io/mapbox-marker/totMean/index.html)\n",
-    "![](./screenshot/analysis.png)"
+    "![](./screenshot/analysis.png)\n",
+    "\n",
+    "![](https://imgur.com/ylMZU8F.png)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": []
   },
   {
